syntax = "proto3";

package com.cgi.eoss.fstep;

import "common_messages.proto";

option java_multiple_files = true;
option java_package = "com.cgi.eoss.fstep.rpc.catalogue";

service CatalogueService {
    rpc DownloadFstepFile (FstepFileUri) returns (stream FileStream);
    rpc GetDatabasketContents (Databasket) returns (DatabasketContents);
    rpc GetDataSourcePolicies (Uris) returns (UriDataSourcePolicies);
}

message FstepFile {
    string filename = 1;
    FstepFileUri uri = 2;
}

message FstepFileUri {
    string uri = 1;
}

message Databasket {
    string uri = 1;
}

message DatabasketContents {
    repeated FstepFile files = 1;
}

message Uris {
    repeated FstepFileUri fileUris = 1;
}

message UriDataSourcePolicies {
    repeated UriDataSourcePolicy policies = 1;
}

message UriDataSourcePolicy {
    enum Policy {
        CACHE = 0;
        MIRROR = 1;
        REMOTE_ONLY = 2;
    }
    FstepFileUri uri = 1;
    Policy policy = 2;
}
